# ripe

./: .gitignore  .travis-build.sh  .travis.yml  ACKNOWLEDGEMENT.md  CHANGELOG.md  CMakeLists.txt  CREDITS.md  HISTORY.md  LICENCE  LICENSE  README.md  config.h.cmake  doxygen.conf  interoperability.sh  openssl-compatibility.sh  package.sh
.github/workflows/: run-tests.yml
cmake/: FindCryptoPP.cmake  FindEASYLOGGINGPP.cmake  FindRipe.cmake  FindZLIB.cmake
doxygen/: README_DOXYGEN.md  conf  customdoxygen.css
include/: InfInt.h  Ripe.h  Ripe5.h  RipeCrypto.h  RipeHelpers.h  log.h
lib/: Ripe.cc  RipeCrypto.cc  RipeHelpers.cc
src/: ripe.cc
test/: Ripe5Test.h  RipeTest.h  main.cc  test.h
